<resources>
    <string name="app_name">TipTime</string>
    <string name="tip_time">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="calculate">CALCULATE</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="okay">Okay (15%)</string>
    <string name="round_up_tip">Round up Tip?</string>
</resources>