...
            modifier = Modifier.padding(start = 10.dp)
        )
        Switch(
            checked = selected,
            onCheckedChange = onCheckedChange,
            modifier = Modifier.padding(start = 170.dp)
                .testTag("roundUp")
        )


    }
}

...
